# F1_RAG

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
F1_RAG/RAG/: RAG_pipeline.py  config.py  document_processor.py  indexing_pipeline.py  main.py
F1_RAG/config/: logging_config.py
F1_RAG/tests/: test_document_processor.py  test_indexing_pipeline.py  test_main.py  test_rag_pipeline.py  test_wiki_downloader.py
F1_RAG/wiki_downloader/: main.py  wiki_downloader.py
F1_RAG/wiki_downloader/config/: defaults.py  logging_config.py
